--- a/templates/result.html
+++ b/templates/result.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Gym Weight Calculator - Result</title>
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
